<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".fragments.FriendFragment">

    <LinearLayout
        android:layout_marginStart="@dimen/_8sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                android:background="@drawable/ic_back"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_75sdp"
                android:text="@string/b_n_b"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginStart="@dimen/_200sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_searchfriendfragmen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnInviteAddFriend"
                tools:viewBindingType="androidx.appcompat.widget.AppCompatButton"
                android:text="@string/l_i_m_i_k_t_b_n"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAlignment="gravity"
                android:background="@drawable/background_button_invite_add_friend"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_25sdp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFriend"
                android:background="@drawable/background_button_invite_add_friend"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/b_n_b"
                android:textSize="@dimen/_10ssp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_25sdp"/>
        </LinearLayout>

        <TextView
            android:text="@string/nh_ng_ng_i_c_th_b_n_bi_t"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListFriendFragment"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>